--- a/src/_assets/scss/partials/_header.scss
+++ b/src/_assets/scss/partials/_header.scss
@@ -48,6 +48,7 @@
     position: relative;
     z-index: 2;
     border: 0;
+    outline: none !important;
   }
   .navbar-brand {
     position: absolute;
